# agent

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  fixtures_loader.py  logging_config.py  main.py
app/api/: routes.py
app/harness/: runtime.py  state.py
app/planner/: base.py  llm.py  rule_based.py
app/policy/: bypass.py  engine.py
app/schemas/: decision.py  intent.py  output.py  tools_io.py
app/tools/: check_policy.py  create_draft_po.py  lookup_catalog.py  registry.py  submit_to_erp.py
docs/: AI_USAGE.md  ARCHITECTURE.md
fixtures/: catalog.json  sample_requests.json
scripts/: demo.py
tests/: conftest.py  test_api.py  test_bypass.py  test_cases.py  test_gate.py  test_logging.py  test_tool_validation.py
