[project]
name = "procurement-agent"
version = "0.1.0"
description = "Procurement approval agent — deterministic policy core with an untrusted planner."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
